# koffice-formulashape

./: CMakeLists.txt
doc/: index.docbook
filters/kformula1.3/: KFormula13Import.cpp
filters/latex/: kformula_latex_export.desktop  latexexport.cc
filters/png/: kformula_png_export.desktop  pngexport.cc
filters/svg/: kformula_svg_export.desktop  svgexport.cc
formulashape/: AttributeManager.cpp  AttributeManager.h  CMakeLists.txt  FormulaCursor.cpp  FormulaDocument.cpp  FormulaEditor.cpp  FormulaRenderer.cpp  KoFormulaShape.cpp  KoFormulaShapeFactory.cpp  KoFormulaShapePlugin.cpp  KoFormulaTool.cpp  KoFormulaToolFactory.h  Mainpage.dox  formulashape.desktop  koformulashape.desktop
formulashape/elements/: BasicElement.cpp  EncloseElement.cpp  ErrorElement.cpp  FixedElement.cpp  FixedElement.h  FormulaElement.cpp  FractionElement.h  GlyphElement.h  MultiscriptElement.cpp  OperatorElement.cpp  OperatorElement.h  RootElement.cpp  RootElement.h  RowElement.h  SubSupElement.cpp  SubSupElement.h  TableDataElement.cpp  TableElement.cpp  TableRowElement.cpp  TableRowElement.h  TextElement.cpp  TokenElement.cpp  TokenElement.h  UnknownElement.cpp  UnknownElement.h
formulashape/tests/: CMakeLists.txt  TestAttributeManager.cpp  TestCursor.cpp
kformula/: CMakeLists.txt  KFormulaCanvas.cpp  KFormulaCanvas.h  KFormulaPartDocument.cpp  KFormulaPartDocument.h  KFormulaPartView.cpp  KFormulaPartView.h  kformula.desktop  kformulapart.desktop
kformula/flake/: CMakeLists.txt  FormulaData.cpp  FormulaData.h  FormulaDocument.h  FormulaEditor.cpp  KoFormulaShape.h  KoFormulaShapeFactory.h  KoFormulaShapePlugin.cpp  KoFormulaShapePlugin.h  KoFormulaTool.cpp  KoFormulaTool.h  KoFormulaToolFactory.cpp  formulashape.desktop
kformula/flake/elements/: BasicElement.cpp  BasicElement.h  FormulaElement.h  FractionElement.cpp  GlyphElement.cpp  MultiscriptElement.h  RowElement.cpp  SpaceElement.cpp  TableElement.h  UnderOverElement.cpp  UnderOverElement.h
kformula/flake/tests/: TestLayout.cpp  TestLoad.cpp  TestLoadAndSave.cpp
